EPMRPP-80924 || fix wrong spacing in integration tab

--- a/app/src/components/integrations/integrationProviders/jiraIntegration/jiraConnectionFormFields/jiraConnectionFormFields.scss
+++ b/app/src/components/integrations/integrationProviders/jiraIntegration/jiraConnectionFormFields/jiraConnectionFormFields.scss
@@ -18,6 +18,5 @@
   margin-bottom: 16px;
 }
 .last-fields {
-  margin-top: 32px;
   margin-bottom: 32px;
 }
